--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -5,6 +5,7 @@
 	border: none;
 	outline: none;
 	box-sizing: border-box;
+	
 }
 
 body {
@@ -22,7 +23,11 @@ a {
 ul {
 	list-style: none;
 }
-
+img{
+	width: 100%;
+	height: 100%;
+	
+}
 
 /* ----------------------------宽高设置-------------------------------------- */
 
