--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -737,11 +737,20 @@ img{
 .white{
 	color:white;
 }
+.black{
+	color:black;
+}
+.light-blue{
+	color: #e5f2ff;
+}
 
 
 /* 加粗 */
 .strong {
 	font-weight: 600;
+}
+.more-strong{
+	font-weight: 800;
 }
 
 /* 标题字体 */
@@ -756,7 +765,18 @@ img{
 	font-size: 12px;
 	color: #8590a6;
 }
-
+.font-13{
+	font-size: 13px;
+}
+.font-14{
+	font-size: 14px;
+}
+.font-16{
+	font-size:16px
+}
+.font-18{
+	font-size: 18px;
+}
 /* 鼠标手型 */
 .link {
 	cursor: pointer;
@@ -861,3 +881,9 @@ img{
 	position: sticky;
 }
 
+.input{
+	border: 1px solid #ebebeb;
+	background-color: #f6f6f6;
+	border-radius: 3px;
+	height: 34px;
+}
